@@ -1,19 +1,17 @@
 package com.myorg;
 
+import software.amazon.awscdk.*;
+import software.amazon.awscdk.services.codepipeline.*;
+import software.amazon.awscdk.services.codepipeline.actions.*;
+import software.amazon.awscdk.services.codebuild.*;
+import software.constructs.Construct;
 import software.amazon.awscdk.Stack;
 import software.amazon.awscdk.StackProps;
-import software.amazon.awscdk.services.codepipeline.Pipeline;
-import software.amazon.awscdk.services.codepipeline.PipelineProps;
-import software.amazon.awscdk.services.codepipeline.actions.GitHubSourceAction;
-import software.amazon.awscdk.services.codepipeline.actions.CodeBuildAction;
-import software.amazon.awscdk.services.codepipeline.actions.GitHubTrigger;
-import software.amazon.awscdk.services.codebuild.PipelineProject;
-import software.amazon.awscdk.services.codebuild.BuildSpec;
-import software.amazon.awscdk.services.iam.Role;
-import software.amazon.awscdk.services.iam.ServicePrincipal;
-import software.constructs.Construct;
+
+import java.util.*;
 
 public class PipelineStack extends Stack {
+
     public PipelineStack(final Construct scope, final String id) {
         this(scope, id, null);
     }
@@ -21,42 +19,47 @@ public class PipelineStack extends Stack {
     public PipelineStack(final Construct scope, final String id, final StackProps props) {
         super(scope, id, props);
 
-        // Create a CodePipeline
+        // -------------------------------
+        // Define a new CodePipeline
+        // -------------------------------
         Pipeline pipeline = Pipeline.Builder.create(this, "MyPipeline")
                 .pipelineName("S3BucketPipeline")
                 .build();
 
-        // GitHub Source Action
-        GitHubSourceAction source = GitHubSourceAction.Builder.create()
+        // -------------------------------
+        // GitHub Source Stage
+        // -------------------------------
+        Artifact sourceOutput = new Artifact("SourceOutput");
+
+        CodeStarConnectionsSourceAction sourceAction = CodeStarConnectionsSourceAction.Builder.create()
                 .actionName("GitHub_Source")
-                .owner("NagarajanChelliya") // replace with your GitHub username
-                .repo("app")        // replace with your repo
-                .oauthToken("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") // store token in Secrets Manager
-                //.oauthToken(SecretValue.secretsManager("GITHUB_TOKEN")) // store token in Secrets Manager
+                .owner("YOUR_GITHUB_USERNAME") // replace
+                .repo("YOUR_REPO_NAME")        // replace
                 .branch("main")
-                .trigger(GitHubTrigger.WEBHOOK)
-                //.output(new Artifact_())
+                .connectionArn("arn:aws:codeconnections:us-east-1:242332171291:connection/a9730499-9831-4922-a23e-79ab6c36cea2")
+                .output(sourceOutput)
                 .build();
 
-        pipeline.addStage(stage -> stage.stageName("Source").actions(Arrays.asList(source)));
+        pipeline.addStage(StageOptions.builder()
+                .stageName("Source")
+                .actions(List.of(sourceAction))
+                .build());
 
-        // CodeBuild project to run CDK deploy
-        PipelineProject buildProject = PipelineProject.Builder.create(this, "CDKBuild")
+        // -------------------------------
+        // Build & Deploy Stage
+        // -------------------------------
+        PipelineProject buildProject = PipelineProject.Builder.create(this, "CDKBuildProject")
                 .buildSpec(BuildSpec.fromObject(Map.of(
                         "version", "0.2",
                         "phases", Map.of(
-                                "install", Map.of(
-                                        "commands", Arrays.asList(
-                                                "npm install -g aws-cdk",
-                                                "mvn install"
-                                        )
-                                ),
-                                "build", Map.of(
-                                        "commands", Arrays.asList(
-                                                "cdk synth",
-                                                "cdk deploy --require-approval=never"
-                                        )
-                                )
+                                "install", Map.of("commands", List.of(
+                                        "npm install -g aws-cdk",
+                                        "mvn clean install"
+                                )),
+                                "build", Map.of("commands", List.of(
+                                        "cdk synth",
+                                        "cdk deploy --require-approval=never"
+                                ))
                         )
                 )))
                 .build();
@@ -64,10 +67,12 @@ public class PipelineStack extends Stack {
         CodeBuildAction buildAction = CodeBuildAction.Builder.create()
                 .actionName("CDK_Build_Deploy")
                 .project(buildProject)
-                .input(source.getOutput())
+                .input(sourceOutput)
                 .build();
 
-        pipeline.addStage(stage -> stage.stageName("BuildDeploy").actions(Arrays.asList(buildAction)));
+        pipeline.addStage(StageOptions.builder()
+                .stageName("Build_Deploy")
+                .actions(List.of(buildAction))
+                .build());
     }
 }
-
